--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a id="fork" href="https://github.com/isnowfy/simple" target="_blank"><img src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <form class="form-horizontal">
             <div class="form-group">
-                <label>Github username</label>
+                <label>Github username(Not your email)</label>
                 <div>
                     <input type="text" name="user" class="form-control" id="loginuser">
                 </div>
